# agent-reviewer

./: Cargo.toml  readme.md
docs/: RUNNING.md  TECHNICAL.md
src/: main.rs  models.rs  orchestrator.rs  review.rs
src/agent/: bug.rs  meta_agent.rs  mod.rs  performance.rs  prompts.rs  style.rs  trait.rs
src/llm/: client.rs  mod.rs
