[package]
name = "agent-reviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"